# roomler-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.agent-e2e  Dockerfile.e2e  HANDOFF.md  HANDOVER10.md  HANDOVER11.md  HANDOVER12.md  HANDOVER13.md  HANDOVER14.md  HANDOVER15.md  HANDOVER16.md  HANDOVER17.md  HANDOVER18.md  HANDOVER19.md  HANDOVER2.md  HANDOVER20.md  HANDOVER21.md  HANDOVER22.md  HANDOVER23.md  HANDOVER24.md  HANDOVER5.md  HANDOVER8.md  HANDOVER9.md  README.md  docker-compose.yml  package-lock.json  rust-toolchain.toml  stress-test-conference.mjs  turnserver.conf
agents/roomler-agent/: Cargo.toml
agents/roomler-agent-tray/: Cargo.toml  build.rs  tauri.conf.json
agents/roomler-agent-tray/src/: commands.rs  main.rs  tray.rs
agents/roomler-agent-tray/src/front/: app.js  consent.js  devices.js  enrollment.html  enrollment.js  index.html  onboarding.js  overview.js  settings.html  settings.js  status.js  styles.css  tunnels.js
agents/roomler-agent/packaging/linux/: README.Debian  roomler.service
agents/roomler-agent/packaging/windows/: README.txt
agents/roomler-agent/scripts/: m3-a1-verify-win11.ps1  m5-verify-win11.ps1
agents/roomler-agent/src/: appdirs.rs  clipboard.rs  config.rs  consent.rs  crash_recorder.rs  crash_uploader.rs  derp.rs  display_match.rs  dpi.rs  enrollment.rs  files.rs  fp16.rs  install_cleanup.rs  instance_lock.rs  jwt_introspect.rs  lib.rs  localapi_state.rs  lock_overlay.rs  lock_state.rs  logging.rs  logs_fetch.rs  logs_upload.rs  machine.rs  main.rs  mdns_resolve.rs  notify.rs  overlay.rs  peer.rs  post_install.rs  preflight.rs  rc_local_turn.rs  service.rs  signaling.rs  subnet_detect.rs  updater.rs  version_sweep.rs  virtual_desktop.rs  watchdog.rs  win32_monitors.rs  win_service.rs  (+1 more)
agents/roomler-agent/src/apps/: linux.rs  mod.rs  windows.rs
agents/roomler-agent/src/audio/: cpal_backend.rs  mod.rs  opus_encode.rs
agents/roomler-agent/src/capture/: cursor.rs  mod.rs  scrap_backend.rs  synthetic_backend.rs  wgc_backend.rs
agents/roomler-agent/src/encode/: aimd.rs  caps.rs  color.rs  decode_pressure.rs  encode_pressure.rs  libvpx.rs  mf_backend.rs  mod.rs  openh264_backend.rs  viewer_rate.rs
agents/roomler-agent/src/indicator/: mod.rs  win.rs
agents/roomler-agent/src/input/: enigo_backend.rs  mod.rs  system_context_backend.rs  win_text.rs
agents/roomler-agent/src/install_detect/: mod.rs  msi_guid.rs  upgrade_codes.rs
agents/roomler-agent/src/system_context/: capture_pump.rs  desktop_rebind.rs  dxgi_direct.rs  dxgi_dup.rs  dxgi_util.rs  gdi_backend.rs  mod.rs  peer_presence.rs  user_profile.rs  winlogon_token.rs  worker_role.rs
agents/roomler-agent/src/tunnel/: acceptor.rs  acl.rs  client_mgr.rs  dialer.rs  mod.rs  peer.rs  quic_peer.rs  route_reconciler.rs
agents/roomler-agent/src/win_service/: capture_smoke.rs  desktop.rs  environment.rs  mod.rs  supervisor.rs  system_context_attempt.rs  system_context_probe.rs
agents/roomler-agent/tests/: file_dc.rs
agents/roomler-agent/vcpkg-ports/ffmpeg-roomler/: README.md  portfile.cmake  vcpkg.json
agents/roomler-agent/wix/: main-perMachine.wxs  main.wxs
agents/roomler-agent/wix-perMachine/: main.wxs
agents/roomler-installer/: Cargo.toml  build.rs  tauri.conf.json
agents/roomler-installer/src/: asset_resolver.rs  commands.rs  install_orchestrator.rs  lib.rs  main.rs  msi_runner.rs  progress.rs  wizard_state.rs
agents/roomler-installer/src/front/: app.js  index.html  styles.css
agents/roomler-setup/: Cargo.toml  build.rs  tauri.conf.json
agents/roomler-setup/capabilities/: default.json
agents/roomler-setup/src/: commands.rs  lib.rs  main.rs  orchestrator_agent.rs  orchestrator_tunnel.rs  proxy.rs  role.rs
agents/roomler-setup/src/front/: app.js  index.html  styles.css
agents/roomler-tunnel/: Cargo.toml
agents/roomler-tunnel-installer/: Cargo.toml  tauri.conf.json
agents/roomler-tunnel-installer/src/: asset_resolver.rs  commands.rs  enroll.rs  extract.rs  install_orchestrator.rs  integration.rs  lib.rs  main.rs  progress.rs  wizard_state.rs
agents/roomler-tunnel-installer/src/front/: app.js  index.html  styles.css
agents/roomler-tunnel/src/: config.rs  forward.rs  lib.rs  localclient.rs  main.rs  mesh.rs  socks5.rs  udp.rs  update.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs  state.rs
crates/api/src/extractors/: auth.rs  tenant.rs
crates/api/src/routes/: agent_crash.rs  agent_log.rs  agent_release.rs  auth.rs  background_task.rs  conference.rs  consent.rs  export.rs  file.rs  giphy.rs  helpers.rs  integration.rs  invite.rs  message.rs  mod.rs  notification.rs  oauth.rs  overlay_route.rs  push.rs  reaction.rs  recording.rs  remote_control.rs  role.rs  room.rs  search.rs  setup_release.rs  stripe.rs  tenant.rs  transcription.rs  tunnel.rs  tunnel_release.rs  tunnel_wizard_release.rs  user.rs
crates/api/src/ws/: derp.rs  dispatcher.rs  handler.rs  mod.rs  overlay.rs  redis_pubsub.rs  remote_control.rs  storage.rs  tunnel.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  indexes.rs
crates/db/src/models/: activation_code.rs  agent_log.rs  audit_log.rs  background_task.rs  call_chat_message.rs  consent_request.rs  custom_emoji.rs  file.rs  invite.rs  message.rs  mod.rs  notification.rs  push_subscription.rs  reaction.rs  recording.rs  role.rs  room.rs  room_member.rs  tenant.rs  tenant_member.rs  transcription.rs  user.rs
crates/remote_control/: Cargo.toml
crates/remote_control/src/: audit.rs  consent.rs  error.rs  hub.rs  lib.rs  models.rs  permissions.rs  serde_helpers.rs  session.rs  signaling.rs  turn_creds.rs
crates/roomler-setup-core/: Cargo.toml
crates/roomler-setup-core/src/: asset_resolver.rs  extract.rs  lib.rs  msi_runner.rs  progress.rs  token_peek.rs  tunnel_enroll.rs  wizard_state.rs
crates/tunnel-core/: Cargo.toml
crates/tunnel-core/src/: auth.rs  driver.rs  env.rs  forward.rs  lib.rs  localapi.rs  mux.rs  policy.rs  signaling.rs  signaling_link.rs  udp.rs
crates/tunnel-core/src/overlay/: bridge.rs  direct.rs  dns.rs  mod.rs  nat.rs  (+9 more)
(+342 files in other folders)
