[package]
name = "roomler-agent"
version.workspace = true
edition.workspace = true
description = "Roomler AI remote-control agent — runs on the controlled host, connects to the Roomler API."

[lib]
name = "roomler_agent"
path = "src/lib.rs"

[[bin]]
name = "roomler-agent"
path = "src/main.rs"

[dependencies]
# Shared protocol types (ClientMsg, ServerMsg, etc.)
roomler-ai-remote-control = { path = "../../crates/remote_control" }
# Tunnel ACL types + helpers (DestinationRule / HostPattern / dst_matches).
# Agent-side allowlist is belt-and-suspenders for the server-side gate.
roomler-ai-tunnel-core = { path = "../../crates/tunnel-core" }

# Async + networking
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

# Subnet auto-detection for the tunnel mesh subnet-router (advertised_routes):
# enumerate local interfaces (if-addrs) + canonicalize CIDRs (ipnet).
if-addrs = "0.15"
ipnet = "2"

# CLI + config
clap = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Daily-rolling file appender for the persistent logs that survive a
# Scheduled-Task / systemd / launchd run where stdout is /dev/null.
# Pinned to the same minor as tracing-subscriber 0.3 so the
# `MakeWriter` plumbing aligns.
tracing-appender = "0.2"

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hashing (for machine_id derivation)
sha2 = { workspace = true }
hex = { workspace = true }

# ObjectId for session keys (mirrors the shared protocol)
bson = { workspace = true }

# Trait helpers
async-trait = { workspace = true }

# WebRTC peer
webrtc = { workspace = true }

# Screen capture (X11 on Linux, DXGI on Windows, CoreGraphics on macOS).
# Gated behind a feature because the transitive system deps (libxcb,
# libxcb-shm, libxcb-randr on Linux) aren't available on every dev box
# and we want `cargo check`/CI green without them. Production builds:
#   cargo build --release --features scrap-capture
scrap = { workspace = true, optional = true }

# Software H.264 encoder (OpenH264).
openh264 = { workspace = true, optional = true }
# Raw OpenH264 C-API constants + structs needed for runtime bitrate
# control (the openh264 crate's `bitrate()` is builder-only; runtime
# changes require SetOption(ENCODER_OPTION_BITRATE, &SBitrateInfo)).
# Pinned to the same minor as the openh264 crate's transitive dep so
# the constants point at the same encoder ABI.
openh264-sys2 = { version = "0.9", optional = true, default-features = false }

# VP9 4:4:4 encoder via libvpx. Feature-gated `vp9-444` because the
# build pulls in C compilation of libvpx (~30 s first build) and a
# small bindgen layer. See docs/vp9-444-plan.md for why we pick VP9
# profile 1 over AV1/HEVC for screen-content 4:4:4.
#
# We bind env-libvpx-sys directly rather than going through the
# `vpx-encode` 0.6 wrapper. `vpx-encode 0.6` hardcodes
# `VPX_IMG_FMT_I420` in its `encode()` and exposes no Config field
# for `g_profile` — both blockers for VP9 profile 1 (8-bit 4:4:4).
# The Y.runtime-encoder rewrite ships `Vp9Encoder` against raw FFI
# (~150 LOC of unsafe in encode/libvpx.rs) so we can configure
# I444 input, profile=1, lag-in-frames=0, and screen-content tuning.
#
# env-libvpx-sys defaults to its pre-generated FFI bindings
# (covering libvpx 1.3.0 through 1.13.0). Builds against newer
# libvpx need the `generate` feature to run bindgen at build time —
# enable via the `vp9-444-bindgen` feature below.
#
# Why two features: bindgen 0.68.1 + libclang on Windows has a
# regression that opaques `vpx_codec_enc_cfg` (forward-declared via
# pointer-to-incomplete in a union in vpx_codec.h, then re-declared
# fully in vpx_encoder.h) regardless of libvpx version, breaking
# the build. Linux + macOS bindgen handles it correctly. So Linux
# + macOS release builds (apt's libvpx 1.14, brew's libvpx 1.15) use
# `vp9-444 + vp9-444-bindgen`; the Windows release build sticks to
# `vp9-444` alone and pins libvpx to 1.12.0 via vcpkg so the
# pre-generated bindings match the installed lib.
env-libvpx-sys = { version = "5.1", optional = true }
# AVX2 BGRA→I444 colour convert for the VP9 4:4:4 encoder input.
# Pure SIMD, no FFI, ships its own SSE2 fallback.
dcv-color-primitives = { version = "0.6", optional = true }

# Cross-platform input injection (mouse / keyboard).
enigo = { workspace = true, optional = true }

# Opus audio encoder for the system/desktop-audio WebRTC track (`audio`
# feature). Bundles libopus and builds it from C source on first build,
# so there's no runtime lib dependency and it's independent of the
# `ffmpeg-encoder` feature. Platform-agnostic — the codec is the same
# everywhere; only the capture backend (cpal, target-gated below) differs.
# NOTE: 0.3 ships only as a pre-release on crates.io (`0.3.0-rc.0`), so
# the version must name it explicitly — a bare "0.3" resolves to nothing.
# The 0.3 line is the one with the `coder::Encoder` + `SampleRate` /
# `Bitrate::BitsPerSecond` API this module targets.
audiopus = { version = "0.3.0-rc.0", optional = true }

# Option B HEVC plan (rc.65+). `ffmpeg-next` is the safe Rust wrapper
# over FFmpeg's libav*. We use it to dispatch HEVC + H.264 + VP9 to
# vendor HW encoders (NVENC, Intel QSV / oneVPL, AMD AMF) WITHOUT going
# through Windows Media Foundation — closing the RTX 5090 Blackwell
# regression (Known Issues: ActivateObject 0x8000FFFF) and the Iris Xe
# Tiger Lake async-MFT gap. Plus unlocks HW VP9 on Intel iGPUs via
# `vp9_qsv`.
#
# `default-features = false` + `features = ["codec"]` pulls in just
# `libavcodec` bindings. We don't need `libavformat` (no muxing — the
# agent emits raw NAL units over DataChannel), `libavfilter` (no
# filtering), or `libavdevice` (no capture — we use scrap for that).
#
# Gated on `ffmpeg-encoder` feature; off by default. CI's Windows job
# adds it to the build feature set so the link is exercised + measured.
# Linux + macOS jobs stay unchanged (they get FFmpeg via VAAPI in
# rc.74 + VideoToolbox in rc.75).
#
# Build-time: needs FFmpeg headers + libs findable via pkg-config.
# CI Windows job uses vcpkg's `ffmpeg[nvcodec,qsv,amf,...]` port and
# exports `PKG_CONFIG_PATH` to point at the vcpkg install. See
# `.github/workflows/release-agent.yml`.
#
# rc.71 hotfix: `default-features = false, features = ["codec"]` caused
# ffmpeg-next 8.1 to fail to compile because util/interrupt.rs and
# codec/packet/packet.rs reference libavformat symbols that aren't
# gated by the codec feature. Switched to defaults (codec + format +
# filter + device + sw-scaling + sw-resampling) AND extended the vcpkg
# manifest with avformat/avfilter/avdevice to match. MSI larger than
# the original +6 MB estimate; future RC can narrow once feature
# gating is fixed upstream.
ffmpeg-next = { version = "8.1", optional = true }

# Cross-platform text clipboard (Win32 / X11 / macOS). Feature-gated
# behind `clipboard` so builds without the clipboard DC handler
# (signalling-only CI images, future trimmed-down deployments) don't
# pay for the dep. Pulls x11rb on Linux which we already have from
# enigo so the transitive dep graph stays small.
arboard = { workspace = true, optional = true }

# Used by the media pump to wrap encoded NALUs in webrtc Sample.data.
bytes = "1"

# Cursor-shape encoding for the cursor data channel (1E.2). Small —
# only used in one place to b64 a 32-pixel BGRA bitmap per shape.
base64 = { workspace = true }

# Random fallback for machine_id
rand = { workspace = true }

# RFC2822 date parsing for the Phase 8 pre-flight clock-skew check
# (parses the server's HTTP Date: header). Already a workspace dep.
chrono = { workspace = true }

# Streaming zip writer for folder downloads (file-DC v2 Phase 4).
# Pinned to an exact version because the pre-1.0 API is volatile;
# a thin internal wrapper module isolates the surface so an upgrade
# is a one-file change. `tokio` feature gives us async writers that
# integrate with the BackpressuredDcWriter adapter; `deflate` is the
# compression algorithm we use for text-mime entries (binaries land
# as Stored/no-compression to save CPU). Platform-agnostic — works
# on Linux/macOS too. Lives in the top-level [dependencies] (not the
# Windows-only block) so `cargo clippy --workspace` on Linux CI can
# resolve the `async_zip` import in `files.rs::walk_and_zip`.
async_zip = { package = "async_zip", version = "=0.0.17", features = ["tokio", "deflate"] }
# tokio-util's `compat` feature provides FuturesAsyncWriteCompatExt /
# TokioAsyncWriteCompatExt — needed because async_zip exposes its
# entry writers as `futures::AsyncWrite` (its tokio feature internally
# wraps the user writer with Compat) but `tokio::io::copy` requires
# `tokio::AsyncWrite`. Same platform-agnostic placement as `async_zip`.
tokio-util = { version = "0.7", features = ["compat"] }

# Windows Media Foundation H.264 encoder (hardware-accelerated).
# Gated behind target_os and an explicit feature; non-Windows builds
# never touch the `windows` crate. Feature list scoped to the MF, D3D11,
# DXGI, and COM interfaces the encoder actually needs — full-crate
# features blow up compile time without any benefit.
# System-audio capture (`audio` feature). Linux = PulseAudio monitor
# source; Windows = WASAPI loopback (open the default OUTPUT device as an
# input). macOS uses a Noop stub (no cpal there) until ScreenCaptureKit
# lands, so cpal is scoped to just these two targets. Optional so
# default / signalling-only builds don't pull in the audio host libs.
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
cpal = { version = "0.15", optional = true }

[target.'cfg(unix)'.dependencies]
# Used for `flock` in the single-instance lock. Tiny crate, ubiquitous.
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# Effort 2 (Windows Service deployment mode). Optional opt-in alternative
# to the Scheduled Task default. windows-service 0.7 owns the SCM lifecycle
# (service_dispatcher, control handler, status updates) and the manager
# API (CreateService / DeleteService / QueryServiceStatus). Compatible
# with the `windows = "0.58"` crate already pulled in by mf-encoder etc.
windows-service = "0.7"

# Raw Win32 FFI for the M2 worker-supervisor: WTSGetActiveConsoleSessionId,
# WTSQueryUserToken, CreateProcessAsUserW, CreateEnvironmentBlock. Going
# through `windows-sys` (rather than the higher-level `windows` crate) keeps
# this path independent of the feature-gated `windows` we use for MF /
# WGC / viewer-indicator — the service-mode supervisor always wants these
# bindings on Windows builds, regardless of the encoder feature mix.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_RemoteDesktop",        # WTS* APIs
    "Win32_System_Threading",            # CreateProcessAsUserW, STARTUPINFO
    "Win32_Media",                       # timeBeginPeriod/timeEndPeriod/timeGetDevCaps (rc.92 — 1ms timer res so the FFmpeg DC pump isn't quantized to the 15.6ms default)
    "Win32_System_Environment",          # CreateEnvironmentBlock
    "Win32_System_StationsAndDesktops",  # winsta0\default desktop attach
    "Win32_System_Diagnostics_ToolHelp", # CreateToolhelp32Snapshot (find winlogon.exe pid for M3 A1)
    "Win32_UI_HiDpi",                    # SetProcessDpiAwarenessContext (mouse offset fix)
    "Win32_UI_Input_KeyboardAndMouse",   # SendInput + VkKeyScanExW + MapVirtualKeyExW (rc.122 real-VK text injection for the legacy console)
    "Win32_UI_WindowsAndMessaging",      # GetDesktopWindow + GetSystemMetrics (M3 A1 GDI fallback)
    "Win32_Graphics_Gdi",                # GetWindowDC, BitBlt, CreateCompatibleBitmap, GetDIBits (M3 A1 GDI fallback)
    "Win32_Storage_FileSystem",          # GetLogicalDrives (file-DC v2 root listing)
    "Win32_UI_Shell",                    # ShellExecuteExW for UAC-elevated msiexec (rc.18 self-update fix)
    "Win32_System_Registry",             # SHELLEXECUTEINFOW carries an HKEY field; struct gated on this
] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
optional = true
features = [
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D",          # D3D_DRIVER_TYPE + D3D_FEATURE_LEVEL constants
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",       # DXGI_FORMAT etc.
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",     # GetCursorInfo / GetIconInfo for cursor capture (1E.1)
    "Win32_Graphics_Gdi",               # GetDIBits / GetObject / BITMAPINFOHEADER
    "Win32_System_LibraryLoader",        # GetModuleHandleW for viewer-indicator window registration
    # WinRT interop for the WGC capture backend (1C.1):
    # GraphicsCaptureItemInterop::CreateForMonitor(HMONITOR), plus
    # CreateDirect3D11DeviceFromDXGIDevice to wrap our D3D11 device
    # as the IDirect3DDevice that Direct3D11CaptureFramePool expects.
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    # WinRT namespaces for the capture session, frame pool, and
    # IDirect3DSurface / IDirect3DDevice wrappers.
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",                        # EventRegistrationToken, IAsyncAction, TypedEventHandler
    "Foundation_Collections",            # IVectorView<RectInt32> for DirtyRegions
    # Multi-monitor enumeration (MonitorFromPoint / EnumDisplayMonitors).
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",                    # GetDpiForMonitor (future: scale-aware reporting)
]

[features]
default = []
# Enables the scrap-backed screen capture on Linux/Windows/macOS.
scrap-capture = ["dep:scrap"]
# Enables the OpenH264 software video encoder.
openh264-encoder = ["dep:openh264", "dep:openh264-sys2"]
# Enables the Windows Media Foundation hardware H.264 encoder. Windows-
# only by construction (the `windows` crate has no non-Windows target).
# If selected on other platforms, code remains dormant — open_default
# cascade falls through to openh264.
mf-encoder = ["dep:windows"]
# Enables the Windows.Graphics.Capture (WGC) screen-capture backend.
# Preferred on Windows 10 1803+ because it captures the HW mouse
# cursor overlay (DXGI Desktop Duplication does not), emits a
# per-frame DirtyRegion on Win 11 22000+, and plays nicely with
# multi-monitor + HDR. Falls back to scrap (DXGI) on enumeration or
# runtime failure. Pulls in the same `windows` crate feature set as
# `mf-encoder`.
wgc-capture = ["dep:windows"]
# Enables the libvpx VP9 4:4:4 software encoder for the
# DataChannel-bypass video transport (docs/vp9-444-plan.md). Pulls
# in a C build of libvpx and the dcv_color_primitives SIMD colour
# converter. ~30 s extra cold build, ~10 s incremental.
vp9-444 = ["dep:env-libvpx-sys", "dep:dcv-color-primitives"]
# Pair with `vp9-444` when building against a libvpx newer than 1.13.0
# (Ubuntu 24.04 apt = 1.14, brew = 1.15.x). Skip on Windows — bindgen
# blows up there regardless of libvpx version (see env-libvpx-sys dep
# comment above). Pure feature wiring; the C-level work happens at
# build time inside env-libvpx-sys's build.rs.
vp9-444-bindgen = ["env-libvpx-sys/generate"]
# Enables the enigo-based input injection backend.
enigo-input = ["dep:enigo"]
# Enables the clipboard data-channel handler — round-trip text
# between browser and agent via the `clipboard` DC. Cross-platform
# via arboard (Win32 / XClipboard / NSPasteboard). No system deps
# on Windows; Linux pulls x11rb which we already use for enigo.
clipboard = ["dep:arboard"]
# Enables the Windows viewer-indicator overlay — topmost layered
# click-through window drawn on the controlled host to signal "someone
# is watching". Excluded from screen capture via SetWindowDisplayAffinity
# so it never makes it into the RTP stream. No-op on non-Windows.
viewer-indicator = ["dep:windows"]
# System / desktop audio → WebRTC Opus track (opt-in per session via
# `ServerMsg::Request.audio_enabled`). Pulls in the Opus encoder
# (audiopus, bundled libopus from C source) and the cpal capture backend
# (PulseAudio monitor on Linux, WASAPI loopback on Windows; macOS falls
# back to a silent Noop capture). Independent of `ffmpeg-encoder`. See
# `src/audio/`.
audio = ["dep:audiopus", "dep:cpal"]
# Convenience: full media pipeline (capture + software encode).
media = ["scrap-capture", "openh264-encoder"]
# Full media pipeline including the MF hardware encoder. Production
# Windows builds should use this so the open_default cascade can pick
# MF when available and fall back to openh264 when not.
media-hw = ["media", "mf-encoder"]
# Everything needed for a full remote-control session, software only.
full = ["media", "enigo-input", "clipboard", "audio"]
# Everything needed including the MF hardware encoder. Production
# Windows MSI builds with this.
full-hw = ["full", "mf-encoder", "wgc-capture", "viewer-indicator"]
# Phase 1 — deterministic synthetic frame source for the headless
# Linux CI / agent-e2e Pod. Replaces scrap-capture when the runtime
# env var `ROOMLER_AGENT_SYNTHETIC_FRAMES=1` is set, so a Pod with
# no X server / no display can still drive encode + WebRTC end-to-
# end. Production agents (`full` / `full-hw`) DO NOT compile this in;
# the agent-e2e Dockerfile selects `--features synthetic-frame-source,
# openh264-encoder,clipboard` (no scrap, no enigo, no WGC).
synthetic-frame-source = []

# Option B HEVC plan (rc.64+). Enables the FFmpeg-based encoder
# backend in `src/encode/ffmpeg/` that bypasses Windows Media Foundation
# entirely and routes HEVC + H.264 + VP9 through vendor HW encoders
# (NVENC, Intel QSV / oneVPL, AMD AMF) via `ffmpeg-next`. Closes the
# RTX 5090 Blackwell MF regression (Known Issues: ActivateObject
# 0x8000FFFF) and the Iris Xe Tiger Lake async-MFT gap, plus unlocks
# HW VP9 on Intel iGPUs (`vp9_qsv` — unavailable via MF).
#
# rc.64 ships THIS FEATURE FLAG ONLY — no `ffmpeg-next` dep, no CI
# vcpkg plumbing, no encoder code. The stub `src/encode/ffmpeg/mod.rs`
# compiles to `pub fn available() -> bool { false }`. Safe back-out is
# `git revert` of one commit.
#
# rc.65 wires the vcpkg port at `vcpkg-ports/ffmpeg-roomler/` into
# `release-agent.yml`, adds `ffmpeg-next` + `ffmpeg-sys-next` deps,
# and verifies the binding version pair compiles against FFmpeg 7.x
# with `hevc_qsv` / `vp9_qsv` symbols reachable. MSI size delta is
# measured; >+8 MB compressed = HARD STOP and re-plan.
#
# Phased rollout documented in `docs/hevc-dc-plan.md`.
# rc.75 hotfix: ffmpeg-encoder needs dcv_color_primitives for BGRA→NV12.
# Previously only `vp9-444` pulled the dep in, so the CI link-verify test
# step that runs with `--features ffmpeg-encoder` alone hit
# `error[E0432]: unresolved import dcv_color_primitives`.
ffmpeg-encoder = ["dep:ffmpeg-next", "dep:dcv-color-primitives"]

# M3 A1 — SYSTEM-context capture+input on the secure desktop. Lets
# the perMachine MSI deployment drive the Windows lock screen / UAC
# prompt by spawning a worker via stolen winlogon.exe primary-token
# (see `agents/roomler-agent/src/system_context/`). Off by default.
# The perMachine MSI build sets `--features full-hw,system-context`;
# the perUser MSI never compiles any of this.
#
# Empirically validated on a Windows field-test host 2026-05-04 via
# the M3 A1 pre-flight probe binary (see memory
# `project_m3_a1_preflights_2_3_5.md`). Architecture: DXGI Desktop
# Duplication + winlogon-token spawn + LocalSystem SCM service +
# lazy-rebind SetThreadDesktop on input. Replicates RustDesk's
# pattern; no kernel driver, no undocumented APIs.
#
# Windows-only by construction (the underlying FFI is Win32-specific).
# Selecting this feature on non-Windows leaves all the modules
# `#[cfg(target_os = "windows")]`-gated so the build stays green;
# nothing reaches user code.
system-context = []

# Phase 3b — overlay L3 mesh (Tailscale-style). Pulls the WireGuard data
# plane + TUN device from tunnel-core. Default-OFF + gated on the
# `overlay_enabled` config. The agent runs privileged (service), so the
# TUN device + routes come up directly (no helper).
overlay-l3 = ["roomler-ai-tunnel-core/overlay-l3"]
# Netstack overlay surface — the OS-free twin of `overlay-l3`. Instead of a
# real TUN, the node terminates the overlay CIDR in a userspace smoltcp stack
# and exposes a loopback SOCKS5 front, so a locked-down host (full-tunnel VPN)
# reaches the mesh with NO OS routing. Opt in per-run with the env var
# `ROOMLER_AGENT_OVERLAY_NETSTACK_SOCKS=<port>` (see `overlay.rs`). Independent
# of `overlay-l3`; a build may carry either or both (config picks at runtime).
overlay-netstack = ["roomler-ai-tunnel-core/overlay-netstack"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
# File-DC integration test (tests/file_dc.rs) needs the zip crate
# to unpack the agent's streaming-zip output and verify content.
zip = { version = "2", default-features = false, features = ["deflate"] }

# ---------------------------------------------------------------------------
# Packaging metadata
# ---------------------------------------------------------------------------

# cargo-deb (Linux .deb)
#   cargo deb -p roomler-agent --no-build
# Produces target/debian/roomler-agent_<version>_amd64.deb
[package.metadata.deb]
maintainer = "Goran Jovanov <goran.jovanov@gmail.com>"
copyright = "2026, Goran Jovanov <goran.jovanov@gmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Native remote-control agent for the Roomler AI platform. Runs on the \
controlled host, maintains an outbound WebSocket connection to the \
Roomler API for signalling, and serves a WebRTC peer directly to the \
browser controller (video + input over P2P — the server never sees \
raw pixels or keystrokes)."""
# libvpx / opus / vorbis / dav1d etc. are NOT listed: the CI "Bundle FFmpeg +
# its runtime deps" step ships them (SONAME-named, $ORIGIN RPATH) inside
# usr/lib/roomler-agent so the .deb is self-contained on any glibc host. Only
# the ABI-stable, always-present X11 client libs stay external — a false
# `libvpx9 | libvpx7` alt used to be here and made the agent claim-compatible
# with 22.04's libvpx.so.7 while its FFmpeg actually hard-links libvpx.so.9.
depends = "libc6, libxcb1, libxcb-shm0, libxcb-randr0, libasound2"
section = "net"
priority = "optional"
assets = [
    ["target/release/roomler-agent", "usr/bin/", "755"],
    # Bundled FFmpeg 8.1.2 (LGPL) + its transitive runtime deps (libvpx, opus,
    # vorbis, dav1d, …) for the ffmpeg-encoder HEVC + vp9-444 backends. Populated
    # by the "Bundle FFmpeg + its runtime deps" CI step (SONAME-named real files,
    # $ORIGIN RPATH) so the .deb is self-contained on any glibc host — stock
    # Ubuntu ships an ABI-incompatible FFmpeg 6.1, and 22.04 has libvpx.so.7 vs
    # the .so.9 the vendored FFmpeg links. This glob is CI-only (the Linux .deb is
    # never built locally).
    ["vendor-ffmpeg/*.so.*", "usr/lib/roomler-agent/", "644"],
    ["packaging/linux/roomler-agent.service", "usr/lib/systemd/user/roomler-agent.service", "644"],
    ["packaging/linux/README.Debian", "usr/share/doc/roomler-agent/README.Debian", "644"],
]

# cargo-wix (Windows .msi)
#   cargo wix -p roomler-agent --nocapture
# Produces target/wix/roomler-agent-<version>-x86_64.msi
# Source lives at agents/roomler-agent/wix/main.wxs.
[package.metadata.wix]
upgrade-guid = "1F2D7B1C-8B2F-4D2E-B1A3-6B1E2C7E4D91"
path-guid    = "3A8C9F21-4E7D-4A8E-9F3B-8D1C2E7F5A62"
license      = false
eula         = false
