[package]
name = "roomler-setup"
version.workspace = true
edition.workspace = true
description = "Unified install + onboarding wizard for the Roomler daemon (Windows MSI flavours) and the roomler tunnel CLI (Win/Linux/macOS)."

[lib]
# Lib name DELIBERATELY avoids the "install"/"setup"/"update"/"patch"
# substrings: Windows UAC's "installer detection" heuristic
# auto-elevates 32/64-bit EXEs whose filename contains any of those.
# Cargo's test binaries are named after the lib crate, so a lib named
# `roomler_setup` would produce `roomler_setup-<hash>.exe` which UAC
# refuses to launch from an unelevated `cargo test` with "os error
# 740: The requested operation requires elevation". Same lesson as the
# retired rc.28 agent wizard (lib `wizard_core`), the retired rc.59
# tunnel wizard (lib `tunnel_wizard_core`), and the P4a shared core
# (lib `wizard_shared`).
name = "wizard_app"
path = "src/lib.rs"

[[bin]]
name = "roomler-setup"
path = "src/main.rs"
# test = false because the bin's test-harness EXE would be
# `roomler_setup-<hash>.exe` → UAC installer-detection refuses to
# launch it unelevated (the "setup" substring trips the heuristic).
# The legacy wizards dodge this only because every documented gate
# uses `--lib`; this crate makes the invariant structural so a plain
# `cargo test -p roomler-setup` can't wedge on a UAC prompt.
test = false

[dependencies]
# P4a shared wizard mechanics: unified ProgressEvent + replay log,
# wizard-state persistence, token peek, asset resolver (health GET +
# streaming download + SHA256), MSI runner, archive extract,
# PATH/symlink integration, tunnel-enroll HTTP. The app owns the
# Tauri surface + the agent/tunnel lib calls; core owns the mechanics.
roomler-setup-core = { path = "../../crates/roomler-setup-core" }

# Lib dep on the agent — the daemon orchestrator reuses `config::
# {save, machine_global_config_path, default_config_path}`,
# `enrollment::enroll`, `machine::derive_machine_id`, `install_detect::
# detect_existing_install`, `jwt_introspect::parse_unverified`, and
# `updater::spawn_installer_for_flavour_with_properties` directly as
# lib calls. Transitively pulls the agent's heavy deps (webrtc-rs
# etc.) — same trade-off the legacy wizards accepted: a fatter EXE,
# but the install pipeline stays lib-driven with no CLI shelling.
roomler-agent = { path = "../roomler-agent" }

# Lib dep on the tunnel CLI — the tunnel orchestrator reuses
# `config::{TunnelConfig, save, default_config_path}` for the
# config-write half of enrollment and the Welcome-step detect probe.
roomler-tunnel = { path = "../roomler-tunnel" }

# Tauri 2.x runtime. NO `tray-icon` feature — the wizard is a
# foreground window, exits on Finish/Cancel. `custom-protocol` is
# REQUIRED for `cargo build --release` to embed the front-end assets
# rather than loading from `devUrl` (same lesson as the rc.20 tray
# hotfix; see `agents/roomler-agent-tray/Cargo.toml` for the full
# rationale).
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"

# Async + error handling — shared workspace versions.
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Hostname for the default device-name field on the Server step.
gethostname = "0.5"

# Install-root resolution for the tunnel orchestrator (per-user
# Programs dir on Windows, ~/.local/opt on Linux, ~/Applications on
# macOS). Wizard-state paths themselves live in roomler-setup-core.
directories = { workspace = true }

# The Welcome-step tunnel probe parses the CLI's config.toml
# (`toml::from_str::<roomler_tunnel::config::TunnelConfig>`).
toml = { workspace = true }

# (windows-sys deliberately absent — roomler-setup-core owns every
# Win32 mechanic this app needs: MSI wait/terminate, registry PATH
# edit, WM_SETTINGCHANGE broadcast.)

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
